# operon-plugin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: docs.yml  no-operon-runs-additions-on-main.yml
docs/: AGENT_TEAMS_PIVOT_PLAN.md  APPENDIX.MD  SCOPE_AUDIT_v2.1.md  SPEC_GROUNDING_AUDIT.md  index.md
docs/dev/: architecture.md  contributing.md  hooks.md  mcp-server.md  rules-and-enforcement.md  skills.md  testing.md  workflow-engine.md
docs/user-guide/: agents-and-messaging.md  guardrails.md  install.md  mcp-tools-reference.md  quickstart.md  sessions.md  workflows-and-phases.md
operon-runs/docs/: STATUS.md  appendix.md  leadership_findings.md  research.md  userprompt.md
operon-runs/docs/specification/: SPECIFICATION.md  composability.md  skeptic_review.md  terminology.md  user_alignment.md
plugins/operon-plugin/: .mcp.json  LICENSE  pyproject.toml  rules.yaml
plugins/operon-plugin/.claude-plugin/: plugin.json
plugins/operon-plugin/hooks/: hooks.json  pretooluse-wrapper  pretooluse-wrapper.cmd  pretooluse.py  sessionstart-wrapper  sessionstart-wrapper.cmd  sessionstart.py  stop-wrapper  stop-wrapper.cmd  stop.py
plugins/operon-plugin/skills/activate/scripts/: activate-wrapper  activate-wrapper.cmd  activate.py
plugins/operon-plugin/skills/project_team/: SKILL.md
plugins/operon-plugin/skills/restore/: SKILL.md
plugins/operon-plugin/skills/rules/: SKILL.md
plugins/operon-plugin/src/operon_mcp_server/: identity.py  query_protocol.py  rules.py  server.py
plugins/operon-plugin/src/operon_mcp_server/checks/: builtins.py  protocol.py
plugins/operon-plugin/src/operon_mcp_server/tools/: acknowledge_warning.py  activate_workflow.py  advance_phase.py  evaluate.py  get_agent_info.py  restore_operon_session.py  whoami.py
plugins/operon-plugin/workflows/_smoke/: _smoke.yaml
plugins/operon-plugin/workflows/_smoke/worker/: identity.md
plugins/operon-plugin/workflows/project_team/: README.md  project_team.yaml  project_types.md
plugins/operon-plugin/workflows/project_team/binary_portability/: identity.md
plugins/operon-plugin/workflows/project_team/composability/: identity.md  implementation.md  specification.md  testing-implementation.md  testing-specification.md
plugins/operon-plugin/workflows/project_team/coordinator/: documentation.md  identity.md  implementation.md  leadership.md  setup.md  signoff.md  specification.md  testing_implementation.md  testing_specification.md  testing_vision.md  vision.md
plugins/operon-plugin/workflows/project_team/implementer/: identity.md  implementation.md  testing.md
plugins/operon-plugin/workflows/project_team/lab_notebook/: identity.md
plugins/operon-plugin/workflows/project_team/memory_layout/: identity.md
plugins/operon-plugin/workflows/project_team/project_integrator/: identity.md
plugins/operon-plugin/workflows/project_team/researcher/: identity.md
plugins/operon-plugin/workflows/project_team/skeptic/: identity.md  implementation.md  specification.md  testing-implementation.md  testing-specification.md  testing.md
plugins/operon-plugin/workflows/project_team/sync_coordinator/: identity.md
plugins/operon-plugin/workflows/project_team/terminology/: identity.md  specification.md  testing-implementation.md  testing-specification.md
plugins/operon-plugin/workflows/project_team/test_engineer/: identity.md  testing-implementation.md  testing-specification.md
plugins/operon-plugin/workflows/project_team/ui_designer/: identity.md  implementation.md  specification.md
plugins/operon-plugin/workflows/project_team/user_alignment/: identity.md  implementation.md  specification.md  testing-implementation.md  testing-specification.md
scripts/: README.md  smoke_e2e.py  smoke_fixture_setup.py  smoke_phase4_setup.py  smoke_phase5_setup.py
src/operon_mcp_server/: bootstrap.py  channel_tag.py  elicit.py  identity.py  inbox.py  inbox_reader.py  locks.py  mailbox.py  nudge.py  paths.py  roster.py  rules.py  server.py  subagent_install.py  watch.py  workflow.py
src/operon_mcp_server/checks/: __init__.py  builtins.py  protocol.py
src/operon_mcp_server/tools/: acknowledge_warning.py  activate_workflow.py  advance_phase.py  arm_nudge_timer.py  bind_handle.py  broadcast_message.py  close_agent.py  get_agent_info.py  get_applicable_rules.py  get_phase.py  interrupt_agent.py  list_operon_sessions.py  message_agent.py  request_override.py  restore_operon_session.py  send_to_member.py  set_artifact_dir.py  spawn_agent.py  whoami.py
tests/: conftest.py  test_channel_tag.py  test_locks.py
tests/_harness/: artifact_bundle.py  cc_version_gate.py  idle.py  inbox_watcher.py  pty_driver.py  step_recorder.py  tmux_driver.py  token_meter.py  transcript_observer.py
tests/fixtures/project_team_workflow_fixture/: README.md
tests/fixtures/project_team_workflow_fixture/seed/.operon/: rules.yaml
tests/scenarios/: _smoke_test_harness.py  project_team_workflow.py
