[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "operon_mcp_server"
version = "0.0.1"
description = "MCP server backing operon-plugin: multi-Agent workflows, phase engine, and guardrail Rules for Claude Code."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Boaz Mohar", email = "boazmohar@gmail.com" },
]
keywords = ["claude-code", "mcp", "plugin", "operon", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    # Upper bounds pin majors so a breaking SDK release doesn't blow up
    # users without warning. Bump when we've verified compatibility.
    "mcp>=1.0,<2",
    "watchdog>=4.0,<7",
    "PyYAML>=6.0,<7",
]

[project.scripts]
operon-mcp-server = "operon_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/SprustonLab/operon-plugin"
Repository = "https://github.com/SprustonLab/operon-plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/operon_mcp_server"]

[dependency-groups]
# E2E test infrastructure -- per
# `.project_team/claude_code_port/specification/TEST_SPECIFICATION.md`,
# the test bed is real subscription-path Claude Code driven via tmux
# with JSONL transcripts as observers. The harness lives under
# `tests/_harness/` and is plain-stdlib (no extra runtime deps); the
# only dev requirement is pytest + pytest-timeout.
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# All scenario file names end with the scenario name (e.g.
# `project_team_workflow.py`); pytest's default `test_*.py` discovery
# does not match, so widen the pattern.
python_files = ["test_*.py", "*_workflow.py", "_smoke_*.py"]
python_functions = ["test_*"]
