[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "operon_mcp_server"
version = "0.0.1"
description = "MCP server backing operon-plugin: multi-Agent workflows, phase engine, and guardrail Rules for Claude Code."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Boaz Mohar", email = "boazmohar@gmail.com" },
]
keywords = ["claude-code", "mcp", "plugin", "operon", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    # Upper bounds pin majors so a breaking SDK release doesn't blow up
    # users without warning. Bump when we've verified compatibility.
    "mcp>=1.0,<2",
    "watchdog>=4.0,<7",
    "PyYAML>=6.0,<7",
]

[project.scripts]
operon-mcp-server = "operon_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/SprustonLab/operon-plugin"
Repository = "https://github.com/SprustonLab/operon-plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/operon_mcp_server"]

[dependency-groups]
# E2E test infrastructure. The test bed is real subscription-path
# Claude Code driven via a controlling pty (see
# `tests/_harness/pty_driver.py`); the JSONL transcript provides
# the observer surface. pexpect handles fork/exec/master-pty
# mechanics; pyte renders the alt-screen ANSI stream so the
# harness can read CC's team-panel widget. (Legacy
# `tests/_harness/tmux_driver.py` works for sub-acts 1-4 but does
# not present the lead's TUI when teammate subprocesses overlay
# the shared pane -- see milestone 2i artifact dump.)
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "pexpect>=4.9",
    "pyte>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# All scenario file names end with the scenario name (e.g.
# `project_team_workflow.py`); pytest's default `test_*.py` discovery
# does not match, so widen the pattern.
python_files = ["test_*.py", "*_workflow.py", "_smoke_*.py"]
python_functions = ["test_*"]
