# Dev/test workspace root for operon-plugin.
#
# The distributable plugin -- including the `operon_mcp_server` Python
# package and its runtime pyproject -- lives in `plugins/operon-plugin/`
# so a marketplace install (`${CLAUDE_PLUGIN_ROOT}` = that subtree) is
# fully self-contained. This root project exists ONLY for development:
# it has no `[build-system]`, so uv treats it as a virtual project (not
# itself installable), pulls in the plugin as a workspace member, and
# owns the test + docs toolchain plus pytest discovery config.
#
# Common commands (run from repo root):
#   uv sync --dev          # build the env: operon_mcp_server (editable) + dev deps
#   uv run pytest          # run the suite
#   uv run mkdocs build    # build the docs site

[project]
name = "operon-plugin-dev"
version = "0.0.1"
description = "Development workspace for operon-plugin; the shipped plugin lives in plugins/operon-plugin."
requires-python = ">=3.10"
dependencies = [
    "operon_mcp_server",
]

[tool.uv.workspace]
members = ["plugins/operon-plugin"]

[tool.uv.sources]
operon_mcp_server = { workspace = true }

[dependency-groups]
# E2E test infrastructure. The test bed is real subscription-path
# Claude Code driven via a controlling pty (see
# `tests/_harness/pty_driver.py`); the JSONL transcript provides
# the observer surface. pexpect handles fork/exec/master-pty
# mechanics; pyte renders the alt-screen ANSI stream so the
# harness can read CC's team-panel widget. (Legacy
# `tests/_harness/tmux_driver.py` works for sub-acts 1-4 but does
# not present the lead's TUI when teammate subprocesses overlay
# the shared pane -- see milestone 2i artifact dump.)
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "pexpect>=4.9",
    "pyte>=0.8",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# All scenario file names end with the scenario name (e.g.
# `project_team_workflow.py`); pytest's default `test_*.py` discovery
# does not match, so widen the pattern.
python_files = ["test_*.py", "*_workflow.py", "_smoke_*.py"]
python_functions = ["test_*"]
