[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "operon_mcp_server"
version = "0.0.1"
description = "MCP server backing operon-plugin: multi-Agent workflows, phase engine, and guardrail Rules for Claude Code."
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Boaz Mohar", email = "boazmohar@gmail.com" },
]
keywords = ["claude-code", "mcp", "plugin", "operon", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    # Upper bounds pin majors so a breaking SDK release doesn't blow up
    # users without warning. Bump when we've verified compatibility.
    "mcp>=1.0,<2",
    "watchdog>=4.0,<7",
    "PyYAML>=6.0,<7",
]

[project.scripts]
operon-mcp-server = "operon_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/SprustonLab/operon-plugin"
Repository = "https://github.com/SprustonLab/operon-plugin"

# Package source lives at `src/operon_mcp_server` relative to THIS file,
# i.e. inside the plugin's installed tree. The `bin/operon-mcp-server`
# shim and the `hooks/*-wrapper` launchers prepend `${CLAUDE_PLUGIN_ROOT}/src`
# to PYTHONPATH (and run `uv run --project ${CLAUDE_PLUGIN_ROOT}`), both of
# which resolve here -- so the MCP server and hooks import the package
# after a marketplace install, with no reference to files outside the
# plugin directory.
[tool.hatch.build.targets.wheel]
packages = ["src/operon_mcp_server"]
